--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* header */
 header {
     width: 100%;
     height: 70px;
@@ -14,8 +15,8 @@ header {
 }
 
 .logo {
-     height: 70px;
-     width: 150px;
+    height: 70px;
+    width: 150px;
 }
 
 .nav-list {
@@ -27,10 +28,116 @@ header {
 
 
 .nav-list-item {
-     list-style: none;
-     display: inline-block;
-     margin: 0 30px;
-     padding: 10px 0;
+    list-style: none;
+    display: inline-block;
+    margin: 0 30px;
+    padding: 10px 0;
+}
+
+/* main-visual */
+.main-visual {
+    width: 100%;
+    height: 650px;
+    background-image: url(img/mv.png);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    padding-top: 200px;
+}
+
+.main-visual-text {
+    font-size: 64px;
+    color: #fafafa;
+}
+
+.main-visual-name {
+    font-size: 20px;
+    color: #fafafa;
+    margin-top: 10px;
+}
+
+/* portfolio */
+.portfolio {
+    background-color: #eceff1;
+    text-align: center;
+    padding: 90px 0 90px 0;
+}
+
+.portfolio-text {
+    font-size: 32px;
+    color: #000000;
+    padding-bottom: 8px;
+    display: inline-block;
+    border-bottom: solid 3px #ec715f;
+}
+
+
+.portfolio-name {
+    font-size: 16px;
+    color: #000000;
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.portfolio-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.portfolio-img1 {
+    background-image: url(img/sketch.jpg);
+    background-size: cover;
+    width: 300px;
+    height: 250px;
+    background-position: center;
+    margin: 10px 0 0 10px;
+}
+
+.portfolio-img2 {
+    background-image: url(img/websuku.png);
+    background-size: cover;
+    width: 300px;
+    height: 250px;
+    background-position: center;
+    margin: 10px 0 0 10px;;
+}
+
+.portfolio-img3 {
+    background-image: url(img/write.jpg);
+    background-size: cover;
+    width: 300px;
+    height: 250px;
+    background-position: center;
+    margin: 10px 0 0 10px;
+}
+
+.portfolio-img4 {
+    background-image: url(img/webcamp.png);
+    background-size: cover;
+    width: 300px;
+    height: 250px;
+    background-position: center;
+    margin: 10px 0 0 10px;
+}
+
+.portfolio-img5 {
+    background-image: url(img/talk.jpg);
+    background-size: cover;
+    width: 300px;
+    height: 250px;
+    background-position: center;
+    margin: 10px 0 0 10px;
+}
+
+.portfolio-img6 {
+    background-image: url(img/webcamp-mother.png);
+    background-size: cover;
+    width: 300px;
+    height: 250px;
+    background-position: center;
+    margin: 10px 0 0 10px;
 }
 
 
