--- a/style.css
+++ b/style.css
@@ -67,8 +67,19 @@ header {
     font-size: 32px;
     color: #000000;
     padding-bottom: 8px;
-    display: inline-block;
-    border-bottom: solid 3px #ec715f;
+    position: relative;
+}
+
+.portfolio-text::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    width: 70px;
+    height: 3px;
+    background-color: #ec715f;
+    margin-top: 8px;
 }
 
 
