--- a/style.css
+++ b/style.css
@@ -151,6 +151,129 @@ header {
     margin: 10px 0 0 10px;
 }
 
+/* feature */
+.features {
+    background-color: #fff;
+    text-align: center;
+    padding: 90px 0 90px 0;
+}
+
+.feature-text {
+  font-size: 32px;
+  color: #000000;
+  position: relative;
+  padding-bottom: 8px;
+}
+
+.feature-text::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    width: 70px;
+    height: 3px;
+    background-color: #ec715f;
+    margin-top: 8px;
+}
+
+.feature-name {
+    font-size: 16px;
+    color: #000000;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.strength-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+.strength {
+    width: 320px;
+    text-align: center;
+    margin: 10px;
+}
+
+.strength-name {
+    font-size: 20px;
+    color: #000000;
+    margin-bottom: 10px;
+}
+
+.strength-text {
+     font-size: 16px;
+     color: #000000;
+     text-align: start;
+}
+
+/* profile */
+.profile {
+    background-color: #eceff1;
+    text-align: center;
+    padding: 90px 0 90px 0;
+}
+
+.profile-text {
+    font-size: 32px;
+    color: #000000;
+    padding-bottom: 8px;
+    position: relative;
+}
+
+.profile-text::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    width: 70px;
+    height: 3px;
+    background-color: #ec715f;
+    margin-top: 8px;
+}
+
+.profile-name {
+    font-size: 16px;
+    color: #000000;
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+img {
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+}
+
+.profile-bottom {
+    display: inline-flex;
+    justify-content: center;
+}
+
+.profile-img {
+    width: 512px;
+}
+
+.profile-ex {
+    width: 512px;
+    text-align: start;
+}
+
+.profile-ex h2 {
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.profile-ex p {
+    font-size: 16px;
+    margin-bottom: 20px;
+    color: #000000;
+}
+
 
 footer {
    width: 100%;
